@@ -1,153 +1,182 @@
 package com.example.book_n_go.controller;
 
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
-
-import java.util.List;
-import java.util.Optional;
-
-import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.context.annotation.Import;
-import org.springframework.http.MediaType;
-import org.springframework.test.web.servlet.MockMvc;
-
-import com.example.book_n_go.config.TestConfig;
-import com.example.book_n_go.enums.Role;
 import com.example.book_n_go.model.Location;
 import com.example.book_n_go.model.User;
 import com.example.book_n_go.model.Workspace;
+import com.example.book_n_go.repository.LocationRepo;
 import com.example.book_n_go.repository.WorkspaceRepo;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import com.example.book_n_go.service.AuthService;
+import com.example.book_n_go.enums.Role;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.context.SecurityContext;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.Authentication;
 
-@WebMvcTest(WorkspaceController.class)
-@Import(TestConfig.class)
-@AutoConfigureMockMvc(addFilters = false)
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
+
+import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
+
+@ExtendWith(MockitoExtension.class)
 public class WorkspaceControllerTest {
 
-    @Autowired
-    private MockMvc mockMvc;
+    @InjectMocks
+    private WorkspaceController workspaceController;
 
-    @MockBean
+    @Mock
     private WorkspaceRepo workspaceRepo;
 
+    @Mock
+    private LocationRepo locationRepo;
+
+    @Mock
+    private AuthService authService;
+
     private Workspace workspace;
-    private User user;
     private Location location;
+    private User provider;
 
-    public void setUp() {
-        location = new Location(1L, 1, 1, "Alexandria");
-        user = new User(1L, "ahmad@gmail.com", "password", "Ahmad", "0123456789", Role.ADMIN);
-        workspace = new Workspace(1L, location, user);
+    @BeforeEach
+    void setUp() {
+        // Setting up the mock data for Location, User, and Workspace
+        location = new Location(1L, 101, "Main Street", "Cityville");
+        provider = new User(1L, "user@example.com", "password", "John Doe", "123456789", Role.PROVIDER);
+        workspace = new Workspace(1L, location, provider, "Co-working Space", 4.5, "A nice place to work");
     }
 
+    // Test for getWorkspaces
     @Test
-    public void testGetWorkspaces() throws Exception {
-        setUp();
-        when(workspaceRepo.findAll()).thenReturn(List.of(workspace));
+    void testGetWorkspaces_ReturnsWorkspaces() {
+        List<Workspace> workspaces = Arrays.asList(workspace);
 
-        mockMvc.perform(get("/workspaces"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].providerId").value(101));
+        when(workspaceRepo.findAll()).thenReturn(workspaces);
+
+        ResponseEntity<List<Workspace>> response = workspaceController.getWorkspaces();
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(1, response.getBody().size());
     }
 
+    // Test for getWorkspaceById (valid)
     @Test
-    public void testGetWorkspacesEmpty() throws Exception {
-        when(workspaceRepo.findAll()).thenReturn(List.of());
-
-        mockMvc.perform(get("/workspaces"))
-                .andExpect(status().isNoContent());
-    }
-
-    @Test
-    public void testGetWorkspacesInternalServerError() throws Exception {
-        doThrow(new RuntimeException("Database error")).when(workspaceRepo).findAll();
-        mockMvc.perform(get("/workspaces"))
-                .andExpect(status().isInternalServerError());
-    }
-
-    @Test
-    public void testGetWorkspaceById() throws Exception {
-        setUp();
+    void testGetWorkspaceById_ReturnsWorkspace() {
         when(workspaceRepo.findById(1L)).thenReturn(Optional.of(workspace));
 
-        mockMvc.perform(get("/workspaces/{id}", 1))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.providerId").value(101));
+        ResponseEntity<Workspace> response = workspaceController.getWorkspaceById(1L);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(workspace.getId(), response.getBody().getId());
     }
 
+    // Test for getWorkspaceById (not found)
     @Test
-    public void testGetWorkspaceByIdNotFound() throws Exception {
+    void testGetWorkspaceById_NotFound() {
         when(workspaceRepo.findById(1L)).thenReturn(Optional.empty());
 
-        mockMvc.perform(get("/workspaces/{id}", 1))
-                .andExpect(status().isNotFound());
+        ResponseEntity<Workspace> response = workspaceController.getWorkspaceById(1L);
+
+        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
     }
 
+    // Test for createWorkspace (successful creation)
     @Test
-    public void testCreateWorkspace() throws Exception {
-        setUp();
-        when(workspaceRepo.save(any(Workspace.class))).thenReturn(workspace);
+    void testCreateWorkspace_CreatesWorkspace() {
+        // Mock the Authentication and SecurityContext
+        Authentication authentication = mock(Authentication.class);
+        when(authentication.getPrincipal()).thenReturn(provider);
+        SecurityContext securityContext = mock(SecurityContext.class);
+        when(securityContext.getAuthentication()).thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
+        when(authService.getRequestUser()).thenReturn(provider);
+        when(locationRepo.save(workspace.getLocation())).thenReturn(location);
+        when(workspaceRepo.save(workspace)).thenReturn(workspace);
 
-        mockMvc.perform(post("/workspaces")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().writeValueAsString(workspace)))
-                .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.providerId").value(101));
+        ResponseEntity<Workspace> response = workspaceController.createWorkspace(workspace);
+
+        assertEquals(HttpStatus.CREATED, response.getStatusCode());
+        assertEquals(workspace.getName(), response.getBody().getName());
+        assertEquals(workspace.getProvider(), response.getBody().getProvider());
+        // Role check for provider permissions
+        assertTrue(provider.getAuthorities().stream()
+                .anyMatch(auth -> auth.getAuthority().equals("ROLE_PROVIDER")));
     }
 
+    // Test for createWorkspace (internal server error)
     @Test
-    public void testCreateWorkspaceInternalServerError() throws Exception {
-        setUp();
-        doThrow(new RuntimeException("Database error")).when(workspaceRepo).save(any(Workspace.class));
-        mockMvc.perform(post("/workspaces")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().writeValueAsString(workspace)))
-                .andExpect(status().isInternalServerError());
+    void testCreateWorkspace_InternalServerError() {
+        // Mock the Authentication and SecurityContext
+        Authentication authentication = mock(Authentication.class);
+        when(authentication.getPrincipal()).thenReturn(provider);
+        SecurityContext securityContext = mock(SecurityContext.class);
+        when(securityContext.getAuthentication()).thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
+        when(authService.getRequestUser()).thenReturn(provider);
+        when(locationRepo.save(workspace.getLocation())).thenThrow(new RuntimeException("Error"));
+
+        ResponseEntity<Workspace> response = workspaceController.createWorkspace(workspace);
+
+        assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
 
+    // Test for updateWorkspace (successful update)
     @Test
-    public void testUpdateWorkspace() throws Exception {
-        setUp();
+    void testUpdateWorkspace_UpdatesWorkspace() {
+        Workspace updatedWorkspace = new Workspace(1L, location,
+                provider, "Updated Workspace", 5.0, "Updated description");
+
         when(workspaceRepo.findById(1L)).thenReturn(Optional.of(workspace));
-        when(workspaceRepo.save(any(Workspace.class))).thenReturn(workspace);
+        when(locationRepo.findById(workspace.getLocation().getId())).thenReturn(Optional.of(location));
+        when(workspaceRepo.save(workspace)).thenReturn(updatedWorkspace);
 
-        mockMvc.perform(put("/workspaces/{id}", 1)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().writeValueAsString(workspace)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.providerId").value(101));
+        ResponseEntity<Workspace> response = workspaceController.updateWorkspace(1L, updatedWorkspace);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals("Updated Workspace", response.getBody().getName());
+        assertEquals("Updated description", response.getBody().getDescription());
+        // Role check for provider permissions
+        assertTrue(provider.getAuthorities().stream()
+                .anyMatch(auth -> auth.getAuthority().equals("ROLE_PROVIDER")));
     }
 
+    // Test for updateWorkspace (not found)
     @Test
-    public void testUpdateWorkspaceNotFound() throws Exception {
-        setUp();
-        when(workspaceRepo.findById(2L)).thenReturn(Optional.empty());
+    void testUpdateWorkspace_NotFound() {
+        Workspace updatedWorkspace = new Workspace(1L, location,
+                provider, "Updated Workspace", 5.0, "Updated description");
 
-        mockMvc.perform(put("/workspaces/{id}", 2)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().writeValueAsString(workspace)))
-                .andExpect(status().isNotFound());
+        when(workspaceRepo.findById(1L)).thenReturn(Optional.empty());
+
+        ResponseEntity<Workspace> response = workspaceController.updateWorkspace(1L, updatedWorkspace);
+
+        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
     }
 
+    // Test for deleteWorkspace (successful deletion)
     @Test
-    public void testDeleteWorkspace() throws Exception {
+    void testDeleteWorkspace_DeletesWorkspace() {
         doNothing().when(workspaceRepo).deleteById(1L);
 
-        mockMvc.perform(delete("/workspaces/{id}", 1))
-                .andExpect(status().isNoContent());
+        ResponseEntity<HttpStatus> response = workspaceController.deleteWorkspace(1L);
+
+        assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
     }
 
+    // Test for deleteWorkspace (internal server error)
     @Test
-    public void testDeleteWorkspaceInternalServerError() throws Exception {
-        doThrow(new RuntimeException()).when(workspaceRepo).deleteById(1L);
+    void testDeleteWorkspace_InternalServerError() {
+        doThrow(new RuntimeException("Error")).when(workspaceRepo).deleteById(1L);
 
-        mockMvc.perform(delete("/workspaces/{id}", 1))
-                .andExpect(status().isInternalServerError());
+        ResponseEntity<HttpStatus> response = workspaceController.deleteWorkspace(1L);
+
+        assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
 }
